Allow CompactionSegmentIterator to have custom priority